Fix: Migração para o banco de Dados

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=WebApiAulaVideo;User ID=sa;Password=Coaliza@2025;TrustServerCertificate=True"
+    },
   "AllowedHosts": "*"
 }
